# SyncMyFonts

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cross-platform.yml  publish-container.yml
apps/syncmyfonts-ui/: package-lock.json  package.json  smoke-check.mjs
apps/syncmyfonts-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/syncmyfonts-ui/src-tauri/src/: lib.rs  main.rs
crates/syncmyfonts-agent/: Cargo.toml
crates/syncmyfonts-agent/src/: lib.rs  main.rs
crates/syncmyfonts-agent/tests/: lan_sync.rs
crates/syncmyfonts-core/: Cargo.toml
crates/syncmyfonts-core/src/: lib.rs
crates/syncmyfonts-server/: Cargo.toml
crates/syncmyfonts-server/src/: main.rs
docs/: app-install.md  app-mvp-checklist.md  desktop-app-surface.md  lan-sync-protocol.md  macos-client.md  macos-lan-app.md  manual-clean-machine-validation.md  release.md  server-architecture.md  ui-redesign-tauri.md  windows-client.md  windows-lan-app.md
packaging/macos/: Collect-Validation-Evidence.command  README.md  Start-SyncMyFonts.command  com.syncmyfonts.lan-serve.plist.template  com.syncmyfonts.lan-sync.plist.template  install-launchagent.sh  uninstall-launchagent.sh
packaging/windows/: Collect-Validation-Evidence.cmd  Collect-Validation-Evidence.ps1  README.md  Start-SyncMyFonts.cmd  create-startup-shortcut.ps1  install-startup-task.ps1  uninstall-startup-task.ps1
scripts/release/: build-macos.sh  build-windows.ps1
scripts/testing/: generate-smoke-font.py
