[workspace]
members = [
    "crates/syncmyfonts-agent",
    "crates/syncmyfonts-core",
    "crates/syncmyfonts-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/your-org/syncmyfonts"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
font-kit = "0.14"
hex = "0.4"
keyring-core = "1.0.0"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
