[package]
name = "syncmyfonts-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
font-kit.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syncmyfonts-core = { path = "../syncmyfonts-core" }
walkdir.workspace = true
