[package]
name = "syncmyfonts-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "syncmyfonts-agent"
path = "src/main.rs"

[[bin]]
name = "syncmyfonts-gui"
path = "src/bin/syncmyfonts-gui.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
eframe.workspace = true
font-kit.workspace = true
hex.workspace = true
keyring-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syncmyfonts-core = { path = "../syncmyfonts-core" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
windows-native-keyring-store = { version = "1.1.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
