[package]
name = "syncmyfonts-ui"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pcamp96/SyncMyFonts"

[workspace]

[lib]
name = "syncmyfonts_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "syncmyfonts-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
